--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cached_network_image: ^3.4.1
   permission_handler: ^12.0.0+1
   image_picker: ^1.1.2
+  shared_preferences: ^2.5.3
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
